--- a/themes/sada-template/layouts/partials/head.html
+++ b/themes/sada-template/layouts/partials/head.html
@@ -6,10 +6,10 @@
   <meta name="description" content="{{ .Site.Params.description }}" />
   <meta name="author" content="{{ .Site.Params.author }}" />
 
-  <script src="/src/toggleTheme.js"></script>
-  <script src="/src/sada_main.js"></script>
+  <script src="docs/src/toggleTheme.js"></script>
+  <script src="docs/src/sada_main.js"></script>
 
-  <link href="{{ .Site.BaseURL }}/src/bootstrap.min.css" rel="stylesheet" />
+  <link href="docs/src/bootstrap.min.css" rel="stylesheet" />
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
