fixing images path

--- a/themes/sada-template/layouts/partials/header.html
+++ b/themes/sada-template/layouts/partials/header.html
@@ -1,9 +1,9 @@
 <div class="d-flex flex-column flex-sm-row mt-2">
   <div class="mr-4">
-    <script src="{{ .Site.BaseURL }}/src/sada_main.js"></script>
+    <script src="src/sada_main.js"></script>
     <img
       class="rounded-circle"
-      src="{{ .Site.BaseURL }}/images/{{ .Site.Params.profile.photo }}"
+      src="images/{{ .Site.Params.profile.photo }}"
       alt="{{ .Site.Params.author }}"
       style="width: 150px;"
     />
