adding new scripts

--- a/themes/sada-template/layouts/index.html
+++ b/themes/sada-template/layouts/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.Language }}">
   {{ partial "head.html" . }}
+  
+  
 
   <body class="bg-dark container" style="font-family: 'Roboto', sans-serif;">
     {{ partial "header.html" . }}
@@ -20,8 +22,13 @@
         {{ partial "project.html" . }}
         {{ partial "skill.html" . }}
       </div>
+      <div>
+        
+      
+      </div>
     </div>
 
     {{ partial "footer.html" . }}
+    <button onclick="myFunction()">heyy</button>
   </body>
 </html>
