--- a/themes/sada-template/layouts/partials/head.html
+++ b/themes/sada-template/layouts/partials/head.html
@@ -8,6 +8,7 @@
 
   <script src="src/toggleTheme.js"></script>
   <script src="src/sada_main.js"></script>
+  <script src="src/beautifier.js"></script>
 
   <link href="src/bootstrap.min.css" rel="stylesheet" />
   <link
